Making changes to test case to run in jenkins server

--- a/test-output/old/AdminSmokeTestSuite/classes.html
+++ b/test-output/old/AdminSmokeTestSuite/classes.html
@@ -11,6 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>addObjectsToConsignment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeObjectsFromConsignment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>editConsignment</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -46,6 +54,44 @@
 <tr>
 <td>&nbsp;</td>
 <td>editAndSaveObject</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethodInvocation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>admin.sothelabs.testCases.Auction</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>editAuction</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createAndPublishAuction</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addAndPublishLots</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addAndRemoveLots</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
