--- a/test-output/old/AdminSmokeTestSuite/methods-alphabetical.html
+++ b/test-output/old/AdminSmokeTestSuite/methods-alphabetical.html
@@ -1,24 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AdminSmokeTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:08:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:08:13</td>   <td>5024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:08:13</td>   <td>5044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@c818063]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:08:18</td>   <td>10059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@c818063]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>18/12/11 15:08:02</td>   <td>-6204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">createNewConsignment</td> 
-  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/11 15:08:13</td>   <td>5025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@c818063]">createNewObject</td> 
-  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/11 15:08:13</td>   <td>5045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editAndSaveObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@c818063]">editAndSaveObject</td> 
-  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>18/12/11 15:08:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">editConsignment</td> 
-  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:08:18</td>   <td>10087</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/11 15:07:56</td>   <td>-12017</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@1b40d5f0]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1873653341</td>   <td></td> </tr>
+<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">addAndPublishLots</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:22</td>   <td>-18499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">addAndRemoveLots</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>18/12/18 10:38:49</td>   <td>-51441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">addObjectsToConsignment</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:37:55</td>   <td>-104796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:38:29</td>   <td>-71276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:38:32</td>   <td>-67911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:38:49</td>   <td>-51442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:00</td>   <td>-40135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:03</td>   <td>-37072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:22</td>   <td>-18499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:40</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:57</td>   <td>16923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:03</td>   <td>-37071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">createAndPublishAuction</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>18/12/18 10:38:29</td>   <td>-71275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">createNewConsignment</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>18/12/18 10:37:36</td>   <td>-123925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">createNewObject</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="f36e6a">  <td>18/12/18 10:37:55</td>   <td>-104794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editAndSaveObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">editAndSaveObject</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>18/12/18 10:38:32</td>   <td>-67911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">editConsignment</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:39:57</td>   <td>16939</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>18/12/18 10:39:00</td>   <td>-40135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">removeObjectsFromConsignment</td> 
+  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>18/12/18 10:37:30</td>   <td>-130599</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
 </table>
