--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>admin.sothelabs.testCases.Auction.createNewAuction</td></tr>
+<tr><td>admin.sothelabs.testCases.Auction.addAndRemoveLots</td></tr>
+<tr><td>admin.sothelabs.testCases.Auction.addAndPublishLots</td></tr>
 </table>
