--- a/test-output/old/AdminSmokeTestSuite/methods.html
+++ b/test-output/old/AdminSmokeTestSuite/methods.html
@@ -1,44 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AdminSmokeTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:37:30</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>18/12/18 10:37:36</td>   <td>6674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">createNewObject</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:37:55</td>   <td>25803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="f36e6a">  <td>18/12/18 10:37:55</td>   <td>25805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editAndSaveObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">editAndSaveObject</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:38:29</td>   <td>59323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/18 10:38:29</td>   <td>59324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">createNewConsignment</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:38:32</td>   <td>62688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/18 10:38:32</td>   <td>62688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">editConsignment</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:38:49</td>   <td>79157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/18 10:38:49</td>   <td>79158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">addObjectsToConsignment</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:00</td>   <td>90464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="e5ccce">  <td>18/12/18 10:39:00</td>   <td>90464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">removeObjectsFromConsignment</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:03</td>   <td>93527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@3f0ee7cb]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:03</td>   <td>93528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">createAndPublishAuction</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:22</td>   <td>112100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:22</td>   <td>112100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">addAndRemoveLots</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:40</td>   <td>130598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="a2bbf4">  <td>18/12/18 10:39:40</td>   <td>130599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">addAndPublishLots</td> 
-  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:57</td>   <td>147522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@75bd9247]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>18/12/18 10:39:57</td>   <td>147538</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@3c5a99da]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1349414238</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:47:14</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/07 15:47:25</td>   <td>10929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">createNewObject</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:47:45</td>   <td>30647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/07 15:47:45</td>   <td>30647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editAndSaveObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">editAndSaveObject</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:48:13</td>   <td>59121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="6a63af">  <td>19/01/07 15:48:13</td>   <td>59122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">createNewConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:48:18</td>   <td>63734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="6a63af">  <td>19/01/07 15:48:18</td>   <td>63735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">editConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:48:27</td>   <td>73217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="6a63af">  <td>19/01/07 15:48:27</td>   <td>73218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">addObjectsToConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:48:42</td>   <td>87452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="6a63af">  <td>19/01/07 15:48:42</td>   <td>87452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">removeObjectsFromConsignment</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:48:47</td>   <td>92531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/07 15:48:47</td>   <td>92532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">createAndPublishAuction</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:49:11</td>   <td>116557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/07 15:49:11</td>   <td>116557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">addAndRemoveLots</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:49:33</td>   <td>139134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="7e6faf">  <td>19/01/07 15:49:33</td>   <td>139134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">addAndPublishLots</td> 
+  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:49:56</td>   <td>161494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/07 15:49:56</td>   <td>161515</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
 </table>
