--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>admin.sothelabs.testCases.Auction</td>
+<td>admin.sothelabs.testCases.Consignment</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>editAuction</td>
+<td>addObjectsToConsignment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createAndPublishAuction</td>
+<td>removeObjectsFromConsignment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addAndPublishLots</td>
+<td>editConsignment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addAndRemoveLots</td>
+<td>createNewConsignment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
