--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e0a07f">  <td>18/12/18 10:50:59</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="9b8d87">  <td>18/12/18 10:51:06</td>   <td>7050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">createAndPublishAuction</td> 
-  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="e0a07f">  <td>18/12/18 10:51:25</td>   <td>26555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="9b8d87">  <td>18/12/18 10:51:25</td>   <td>26556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.editAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">editAuction</td> 
-  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="e0a07f">  <td>18/12/18 10:51:25</td>   <td>26557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
-<tr bgcolor="e0a07f">  <td>18/12/18 10:51:25</td>   <td>26573</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Auction@2a18f23c]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@873415566</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:36</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/01/07 12:08:44</td>   <td>8089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">createNewConsignment</td> 
+  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:47</td>   <td>11933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/01/07 12:08:47</td>   <td>11933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">editConsignment</td> 
+  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:50</td>   <td>13968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/01/07 12:08:50</td>   <td>13970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">addObjectsToConsignment</td> 
+  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:51</td>   <td>14985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="a9e876">  <td>19/01/07 12:08:51</td>   <td>14986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">removeObjectsFromConsignment</td> 
+  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:52</td>   <td>16002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
+<tr bgcolor="dca596">  <td>19/01/07 12:08:52</td>   <td>16033</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@506e6d5e]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1810132623</td>   <td></td> </tr>
 </table>
