--- a/test-output/old/AdminSmokeTestSuite/methods-not-run.html
+++ b/test-output/old/AdminSmokeTestSuite/methods-not-run.html
@@ -1,7 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>admin.sothelabs.testUtils.SetupUtils.startSession</td></tr>
-<tr><td>admin.sothelabs.testUtils.SetupUtils.startSession</td></tr>
-<tr><td>admin.sothelabs.testUtils.SetupUtils.quitSession</td></tr>
-<tr><td>admin.sothelabs.testUtils.SetupUtils.quitSession</td></tr>
-<tr><td>admin.sothelabs.testCases.Auction.editAuction</td></tr>
+<tr><td>admin.sothelabs.testCases.Consignment.editConsignment</td></tr>
+<tr><td>admin.sothelabs.testCases.Consignment.removeObjectsFromConsignment</td></tr>
+<tr><td>admin.sothelabs.testCases.Consignment.addObjectsToConsignment</td></tr>
 </table>
