--- a/test-output/index.html
+++ b/test-output/index.html
@@ -36,8 +36,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+            <a href="#" class="navigator-link" panel-name="suite-AdminSmokeTestSuite">
+              <span class="suite-name border-passed">AdminSmokeTestSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -47,37 +47,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>testng-customsuite.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-AdminSmokeTestSuite">
+                    <span>VikingSmokeTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="testlist-AdminSmokeTestSuite">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="group-AdminSmokeTestSuite">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="times-AdminSmokeTestSuite">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="reporter-AdminSmokeTestSuite">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-AdminSmokeTestSuite">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="chronological-AdminSmokeTestSuite">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -90,36 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-AdminSmokeTestSuite" class="hide-methods passed suite-AdminSmokeTestSuite"> (hide)</a> <!-- hide-methods passed suite-AdminSmokeTestSuite -->
+                      <a href="#" panel-name="suite-AdminSmokeTestSuite" class="show-methods passed suite-AdminSmokeTestSuite"> (show)</a> <!-- show-methods passed suite-AdminSmokeTestSuite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content passed suite-AdminSmokeTestSuite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="admin.sothelabs.testCases.Consignment" hash-for-method="addObjectsToConsignment">addObjectsToConsignment</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Consignment" hash-for-method="createNewConsignment">createNewConsignment</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="admin.sothelabs.testCases.Consignment" hash-for-method="createNewConsignment">createNewConsignment</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="admin.sothelabs.testCases.Consignment" hash-for-method="editConsignment">editConsignment</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="admin.sothelabs.testCases.Consignment" hash-for-method="removeObjectsFromConsignment">removeObjectsFromConsignment</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content passed suite-AdminSmokeTestSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -130,8 +115,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+        <div panel-name="suite-AdminSmokeTestSuite" class="panel AdminSmokeTestSuite">
+          <div class="suite-AdminSmokeTestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">admin.sothelabs.testCases.Consignment</span>
@@ -139,128 +124,113 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addObjectsToConsignment">
-                  </a> <!-- addObjectsToConsignment -->
-                  <span class="method-name">addObjectsToConsignment</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="createNewConsignment">
                   </a> <!-- createNewConsignment -->
                   <span class="method-name">createNewConsignment</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="editConsignment">
-                  </a> <!-- editConsignment -->
-                  <span class="method-name">editConsignment</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="removeObjectsFromConsignment">
-                  </a> <!-- removeObjectsFromConsignment -->
-                  <span class="method-name">removeObjectsFromConsignment</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
+          </div> <!-- suite-AdminSmokeTestSuite-class-passed -->
+        </div> <!-- panel AdminSmokeTestSuite -->
+        <div panel-name="test-xml-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/ql/xv7h8y5s6dgc87j0bt9mxr3mygqcy1/T/testng-eclipse--271988601/testng-customsuite.xml</span>
+            <span class="header-content">/Users/priya.ganesan/Documents/workspace/SothebysAuctionAdmin/VikingSmokeTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;AdminSmokeTestSuite&quot;&gt;
+  &lt;test thread-count=&quot;1&quot; name=&quot;AdminSmokeTest&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;admin.sothelabs.testCases.Consignment&quot;/&gt;
+      &lt;class name=&quot;admin.sothelabs.testCases.Consignment&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;createNewConsignment&quot;/&gt;
+          &lt;exclude name=&quot;editConsignment&quot;/&gt;
+          &lt;exclude name=&quot;addObjectsToConsignment&quot;/&gt;
+          &lt;exclude name=&quot;removeObjectsFromConsignment&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- admin.sothelabs.testCases.Consignment --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test --&gt;
-&lt;/suite&gt; &lt;!-- Default suite --&gt;
+  &lt;/test&gt; &lt;!-- AdminSmokeTest --&gt;
+&lt;/suite&gt; &lt;!-- AdminSmokeTestSuite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_suite" class="panel">
+        <div panel-name="testlist-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default suite</span>
+            <span class="header-content">Tests for AdminSmokeTestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">AdminSmokeTest (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_suite" class="panel">
+        <div panel-name="group-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default suite</span>
+            <span class="header-content">Groups for AdminSmokeTestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_suite" class="panel">
+        <div panel-name="times-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default suite</span>
+            <span class="header-content">Times for AdminSmokeTestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
+suiteTableInitFunctions.push('tableData_AdminSmokeTestSuite');
+function tableData_AdminSmokeTestSuite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addObjectsToConsignment')
+data.setCell(0, 1, 'createNewConsignment')
 data.setCell(0, 2, 'admin.sothelabs.testCases.Consignment')
-data.setCell(0, 3, 65833);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createNewConsignment')
-data.setCell(1, 2, 'admin.sothelabs.testCases.Consignment')
-data.setCell(1, 3, 27750);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'editConsignment')
-data.setCell(2, 2, 'admin.sothelabs.testCases.Consignment')
-data.setCell(2, 3, 24919);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'removeObjectsFromConsignment')
-data.setCell(3, 2, 'admin.sothelabs.testCases.Consignment')
-data.setCell(3, 3, 20395);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+data.setCell(0, 3, 31966);
+window.suiteTableData['AdminSmokeTestSuite']= { tableData: data, tableDiv: 'times-div-AdminSmokeTestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
-              <div id="times-div-Default_suite">
-              </div> <!-- times-div-Default_suite -->
+              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <div id="times-div-AdminSmokeTestSuite">
+              </div> <!-- times-div-AdminSmokeTestSuite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_suite" class="panel">
+        <div panel-name="reporter-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default suite</span>
+            <span class="header-content">Reporter output for AdminSmokeTestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_suite" class="panel">
+        <div panel-name="ignored-methods-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">admin.sothelabs.testCases.Consignment</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">editConsignment</span>
+                <br/>
+                <span class="ignored-method-name">removeObjectsFromConsignment</span>
+                <br/>
+                <span class="ignored-method-name">addObjectsToConsignment</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_suite" class="panel">
+        <div panel-name="chronological-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -273,39 +243,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">createNewConsignment</span>
-                <span class="method-start">13646 ms</span>
+                <span class="method-start">8377 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethodInvocation([TestResult name=createNewConsignment status=SUCCESS method=Consignment.createNewConsignment()[pri:0...)</span>
-                <span class="method-start">41397 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">editConsignment</span>
-                <span class="method-start">41399 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethodInvocation([TestResult name=editConsignment status=SUCCESS method=Consignment.editConsignment()[pri:0, instance...)</span>
-                <span class="method-start">66319 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">addObjectsToConsignment</span>
-                <span class="method-start">66319 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethodInvocation([TestResult name=addObjectsToConsignment status=SUCCESS method=Consignment.addObjectsToConsignment()...)</span>
-                <span class="method-start">132153 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">removeObjectsFromConsignment</span>
-                <span class="method-start">132153 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethodInvocation([TestResult name=removeObjectsFromConsignment status=SUCCESS method=Consignment.removeObjectsFromCon...)</span>
-                <span class="method-start">152549 ms</span>
+                <span class="method-start">40344 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">quitSession</span>
-                <span class="method-start">152606 ms</span>
+                <span class="method-start">40365 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
