--- a/test-output/old/AdminSmokeTestSuite/methods.html
+++ b/test-output/old/AdminSmokeTestSuite/methods.html
@@ -1,44 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AdminSmokeTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:43:51</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/08 10:43:59</td>   <td>7811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.createNewObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">createNewObject</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:44:19</td>   <td>27168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/08 10:44:19</td>   <td>27168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateObject.editAndSaveObject()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">editAndSaveObject</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:44:52</td>   <td>60421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/01/08 10:44:52</td>   <td>60422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">createNewConsignment</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:45:18</td>   <td>86973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/01/08 10:45:18</td>   <td>86973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">editConsignment</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:45:43</td>   <td>111302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/01/08 10:45:43</td>   <td>111302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">addObjectsToConsignment</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:46:48</td>   <td>176273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/01/08 10:46:48</td>   <td>176273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">removeObjectsFromConsignment</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:47:29</td>   <td>218031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@668bc3d5]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="7e6faf">  <td>19/01/08 10:47:29</td>   <td>218031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">createAndPublishAuction</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:48:37</td>   <td>285681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="7e6faf">  <td>19/01/08 10:48:37</td>   <td>285681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndRemoveLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">addAndRemoveLots</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:49:00</td>   <td>308426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="7e6faf">  <td>19/01/08 10:49:00</td>   <td>308426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.addAndPublishLots()[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">addAndPublishLots</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:49:23</td>   <td>331801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@3cda1055]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/08 10:49:23</td>   <td>331823</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.CreateObject@35f983a6]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/08 12:29:23</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/08 12:29:32</td>   <td>8373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">createNewConsignment</td> 
+  <td>main@759156157</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/08 12:30:04</td>   <td>40340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/08 12:30:04</td>   <td>40361</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
 </table>
